# real-time-algorithmic-trading-system

./: .dockerignore  .gitignore  Makefile  README.md  main.py  pyproject.toml
deployments/dev/: create_cluster.sh
deployments/dev/manifests/: metabase-all-in-one.yaml  mlflow-minio-example_secret.yaml  risingwave-values.yaml
deployments/dev/trades/: trades.yaml
docker/: trades_multistage.Dockerfile
services/candles/: pyproject.toml
services/candles/src/candles/: main.py
services/trades/: pyproject.toml  settings.env  test_quixstreams.py
services/trades/src/trades/: config.py  kraken_rest_api.py  kraken_websocket_api.py  main.py  settings.env  trade.py
