[project]
name = "real-time-algo-trading-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "quixstreams>=3.14.1",
    "trades",
    "typing>=3.10.0.0",
    "websocket-client>=1.8.0",
]

[tool.uv.workspace]
members = ["services/trades"]

[tool.uv.sources]
trades = { workspace = true }
